Compatibilité Java 6/7.